# s2-forest-browning-monitoring

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
checkpoints/: encoder.pt
data/: d2_per_doy_lower.csv  d2_per_doy_median.csv  d2_per_doy_upper.csv  ndvi_anomaly_stats.csv
data/event_polygons/: pixels_storm.txt  polygons_beetles.kml  polygons_clearcut.kml  polygons_drought.kml  polygons_fire.kml  polygons_nobeetles.kml  polygons_noclearcut.kml  polygons_nofire.kml  polygons_nostorm.kml
notebooks/: plot_results.ipynb
src/forest_browning/: config.py  dataset.py  inference.py  mlp.py  rechunk_output.py  shuffle_train_data.py  train.py
tests/: test_version.py
